--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
 <body>
     <header>
         <div class="container">
+            <div class="main-nav">
+                <div class="nav">
+                    <div class="logo">
+                        <img src="assets/imgs/лого.png" alt="логотип">
+                    </div>
+                    <div class="text-nav">
+                        <div class="title-nav">
+                            <div class="delivery">
+                                <a href="#">Доставка</a>
+                                <div class="arrow-down">
+                                    <img src="assets/imgs/arrow.png" alt="стрелка вниз">
+                                </div>
+                            </div>
+                            <a href="#">Услуги</a>
+                            <a href="#">Цены</a>
+                            <div class="contacts">
+                                <a href="#">Контакты</a>
+                                <div class="arrow-down">
+                                    <img src="assets/imgs/arrow.png" alt="стрелка вниз">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+
+            </div>
         </div>
     </header>
 </body>
