--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Landing page</title>
 </head>
 <body>
-    <header>
+    <section>
         <div class="container">
             <div class="main-nav">
                 <div class="nav">
@@ -39,6 +39,6 @@
 
             </div>
         </div>
-    </header>
+    </section>
 </body>
 </html>
