--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
             <div class="main-nav">
                 <div class="nav">
                     <div class="logo">
-                        <img src="assets/imgs/лого.png" alt="логотип">
+                        <img class="logotype" src="assets/imgs/лого.png" alt="логотип">
                     </div>
                     <div class="text-nav">
                         <div class="title-nav">
-                            <div class="delivery">
+                            <div class="button">
                                 <a href="#">Доставка</a>
                                 <div class="arrow-down">
                                     <img src="assets/imgs/arrow.png" alt="стрелка вниз">
                                 </div>
                             </div>
-                            <a href="#">Услуги</a>
-                            <a href="#">Цены</a>
-                            <div class="contacts">
+                            <a href="#" class="b-white">Услуги</a>
+                            <a href="#" class="b-white">Цены</a>
+                            <div class="button">
                                 <a href="#">Контакты</a>
                                 <div class="arrow-down">
                                     <img src="assets/imgs/arrow.png" alt="стрелка вниз">
@@ -35,10 +35,46 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
+
+
+        <div class="base">
+            <img class="car" src="assets/imgs/background.png" alt="">
+            <div class="title-stroke">
+                <div class="big-title">
+                    <h1>Доставка песка, щебня и грунта</h1>
+                    <p>Более 20 лет на рынке</p>
+                </div>
+                <div class="stroke">
+                    <div class="block">
+                        <a href="#" class="icon">
+                            <img src="assets/imgs/icon1.png" alt="точка">
+                        </a>
+                        <div class="text-icon">
+                            <p>Материал</p>
+                        </div>
+                    </div>
+                    <div class="block">
+                        <a href="#" class="icon">
+                            <img src="assets/imgs/calendar%201.png" alt="календарь">
+                        </a>
+                        <div class="text-icon">
+                            <p>Количество</p>
+                        </div>
+                    </div>
+                    <div class="block-yellow">
+                        <a href="#" class="icon">
+                            <img src="assets/imgs/loupe%201.png" alt="лупа">
+                        </a>
+                        <div class="text-icon">
+                            <p>Рассчитать стоимость</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 </body>
 </html>
