--- a/index.html
+++ b/index.html
@@ -49,23 +49,26 @@
                 <div class="stroke">
                     <div class="block">
                         <a href="#" class="icon">
-                            <img src="assets/imgs/icon1.png" alt="точка">
+                            <img src="assets/imgs/icon1.png" class="grey-around" alt="точка">
                         </a>
                         <div class="text-icon">
                             <p>Материал</p>
                         </div>
                     </div>
+
+                    <div class="line"></div>
+
                     <div class="block">
                         <a href="#" class="icon">
-                            <img src="assets/imgs/calendar%201.png" alt="календарь">
+                            <img src="assets/imgs/calendar%201.png" class="grey-around" alt="календарь">
                         </a>
                         <div class="text-icon">
                             <p>Количество</p>
                         </div>
                     </div>
-                    <div class="block-yellow">
+                    <div class="button">
                         <a href="#" class="icon">
-                            <img src="assets/imgs/loupe%201.png" alt="лупа">
+                            <img src="assets/imgs/loupe%201.png" class="lupa" alt="лупа">
                         </a>
                         <div class="text-icon">
                             <p>Рассчитать стоимость</p>
